--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.1",
+        "php": "^5.6 || ^7.0",
         "composer-plugin-api": "^1.1"
     },
     "require-dev": {
         "composer/composer": "^1.9",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpunit/phpunit": "^8.4",
         "roave/security-advisories": "dev-master",
         "webimpress/coding-standard": "^1.0"
