qa: ensure compatibility with PHP 5.6 and up
Modifies plugin code to:

- Remove `void` return type hints (unsupported in PHP 7.0 and 7.1)
- Remove return type hints (unsupported in PHP 5.6)
- Remove scalar type hints (unsupported in PHP 5.6)
- Remove `object` type hints (unsupported until PHP 7.2)
- Add relevant parameter and return annotations as replacements for
  removed type hints.

Passes all phpcompat tests for those versions at this time.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   global:
     - COMPOSER_ARGS="--no-interaction"
     - COVERAGE_DEPS="php-coveralls/php-coveralls"
+    - NO_TEST_DEPS="phpunit/phpunit webimpress/coding-standard"
 
 matrix:
   include:
@@ -32,22 +33,23 @@ matrix:
         - COMPAT_VERSION=7.3
         - CS_CHECK=1
     - php: 7.4snapshot
-  allow_failures:
-    - php: 7.4snapshot
       env:
         - COMPAT_VERSION=7.4
+  allow_failures:
+    - php: 7.4snapshot
 
 before_install:
   - if [[ $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
 
 install:
+  - if [[ $NO_TEST == '1' ]]; then travis_retry composer remove --dev $COMPOSER_ARGS $NO_TEST_DEPS ; fi
   - travis_retry composer install $COMPOSER_ARGS
   - if [[ $TEST_COVERAGE == 'true' ]]; then travis_retry composer require --dev $COMPOSER_ARGS $COVERAGE_DEPS ; fi
   - stty cols 120 && composer show
 
 script:
   - if [[ $TEST_COVERAGE == 'true' ]]; then composer test-coverage ; else if [[ $NO_TEST != '1' ]]; then  composer test ; fi ; fi
-  - if [[ $COMPAT_VERSION != '0' ]]; then composer cs-check -- -p src --standard=PHPCompatibility --runtime-set $COMPAT_VERSION ; fi
+  - if [[ $COMPAT_VERSION != '0' ]]; then composer cs-check -- -p src --standard=PHPCompatibility --runtime-set testVersion $COMPAT_VERSION ; fi
   - if [[ $CS_CHECK == '1' ]]; then composer cs-check ; fi
 
 after_script:
