--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,10 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev",
+            "dev-develop": "1.1.x-dev"
+        },
         "class": "Laminas\\DependencyPlugin\\DependencyRewriterPlugin"
     },
     "scripts": {
