QA: Update to use PHP 7.4 stable build + add travis badge in README.md

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,11 +32,9 @@ matrix:
       env:
         - COMPAT_VERSION=7.3
         - CS_CHECK=1
-    - php: 7.4snapshot
+    - php: 7.4
       env:
         - COMPAT_VERSION=7.4
-  allow_failures:
-    - php: 7.4snapshot
 
 before_install:
   - if [[ $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
