--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ script:
   - if [[ $CS_CHECK == 'true' ]]; then composer cs-check ; fi
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -cF composer${COMPOSER_VERSION}
 
 notifications:
   email: false
