Add `allow_failures` for PHP nightly builds
Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,8 @@ matrix:
       env:
         - TEST_COVERAGE=true
         - COMPAT=true
+  allow_failures:
+    - php: nightly
 
 before_install:
   - if [[ $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
