--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "composer-plugin-api": "^1.1 || ^2.0"
     },
     "require-dev": {
-        "composer/composer": "^1.9 || ^2.0@dev",
+        "composer/composer": "^1.9 || ~2.0.0@dev || ^2.0",
         "mikey179/vfsstream": "^1.6",
         "phpcompatibility/php-compatibility": "^9.3",
         "roave/security-advisories": "dev-master"
