--- a/.travis.yml
+++ b/.travis.yml
@@ -7,47 +7,32 @@ cache:
 env:
   global:
     - COMPOSER_VERSION="1"
-    - COMPAT=false
     - TEST=false
     - CS_CHECK=false
-    - COMPOSER_ARGS="--no-interaction"
-    - TEST_DEPS="phpunit/phpunit:^9.1 phpspec/prophecy-phpunit webimpress/coding-standard:^1.0"
+    - COMPOSER_ARGS="--no-interaction --ignore-platform-reqs"
+    - TEST_DEPS="phpunit/phpunit:^9.3 laminas/laminas-coding-standard:~2.1.0"
 
 matrix:
   include:
-    - php: 5.6
-    - php: 5.6
-      env:
-        - COMPOSER_VERSION=2
-    - php: 7.0
-    - php: 7.0
-      env:
-        - COMPOSER_VERSION=2
-    - php: 7.1
-    - php: 7.1
-      env:
-        - COMPOSER_VERSION=2
-    - php: 7.2
-    - php: 7.2
-      env:
-        - COMPOSER_VERSION=2
-    - php: 7.3
-      env:
-        - COMPOSER_VERSION=2
     - php: 7.3
       env:
         - TEST=true
         - CS_CHECK=true
+    - php: 7.3
+      env:
+        - COMPOSER_VERSION=2
+    - php: 7.4
+      env:
+        - TEST_COVERAGE=true
     - php: 7.4
       env:
         - COMPOSER_VERSION=2
         - TEST_COVERAGE=true
-    - php: 7.4
-      env:
-        - TEST_COVERAGE=true
-        - COMPAT=true
-  allow_failures:
     - php: nightly
+      env:
+    - php: nightly
+      env:
+        - COMPOSER_VERSION=2
 
 before_install:
   - if [[ $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
@@ -61,7 +46,6 @@ install:
 
 script:
   - if [[ $TEST_COVERAGE == 'true' ]]; then composer test-coverage ; else if [[ $TEST != 'false' ]]; then  composer test ; fi ; fi
-  - if [[ "$COMPAT" == 'true' ]]; then composer compat ; fi
   - if [[ $CS_CHECK == 'true' ]]; then composer cs-check ; fi
 
 after_success:
