qa: add psalm integration
- Creates a psalm.xml.dist for the package.
- Adds a `static-analysis` script to `composer.json`.
- Updates Travis configuration:
  - Install `vimeo/psalm` and `psalm/phpunit-plugin` when installing test deps.
  - Run static-analysis script when TEST_COVERAGE env is present.
- Fixes all errors flagged by psalm.
  - Extracts anonymous class to a test asset, and uses proper type hinting against it in test cases.

Signed-off-by: Matthew Weier O'Phinney <matthew@weierophinney.net>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
     - TEST=false
     - CS_CHECK=false
     - COMPOSER_ARGS="--no-interaction --ignore-platform-reqs"
-    - TEST_DEPS="phpunit/phpunit:^9.3 laminas/laminas-coding-standard:~2.1.0"
+    - TEST_DEPS="phpunit/phpunit:^9.3 laminas/laminas-coding-standard:~2.1.0 vimeo/psalm psalm/plugin-phpunit"
 
 matrix:
   include:
@@ -47,6 +47,7 @@ install:
 script:
   - if [[ $TEST_COVERAGE == 'true' ]]; then composer test-coverage ; else if [[ $TEST != 'false' ]]; then  composer test ; fi ; fi
   - if [[ $CS_CHECK == 'true' ]]; then composer cs-check ; fi
+  - if [[ $TEST_COVERAGE == 'true' ]]; then composer static-analysis ; fi
 
 after_success:
   - bash <(curl -s https://codecov.io/bash) -cF composer${COMPOSER_VERSION}
