--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     },
     "require-dev": {
         "composer/composer": "^1.9 || ^2.0",
+        "laminas/laminas-coding-standard": "^2.1",
         "mikey179/vfsstream": "^1.6",
+        "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-master"
     },
     "autoload": {
