--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,8 @@
 {
     "name": "laminas/laminas-dependency-plugin",
-    "description": "Replace zendframework and zfcampus packages with their Laminas Project equivalents.",
     "type": "composer-plugin",
+    "description": "Replace zendframework and zfcampus packages with their Laminas Project equivalents.",
     "license": "BSD-3-Clause",
-    "config": {
-        "sort-packages": true
-    },
     "require": {
         "php": "^7.3 || ~8.0.0",
         "composer-plugin-api": "^1.1 || ^2.0"
@@ -14,6 +11,12 @@
         "composer/composer": "^1.9 || ^2.0",
         "mikey179/vfsstream": "^1.6",
         "roave/security-advisories": "dev-master"
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "class": "Laminas\\DependencyPlugin\\DependencyRewriterPluginDelegator"
     },
     "autoload": {
         "psr-4": {
@@ -24,10 +27,9 @@
         "psr-4": {
             "LaminasTest\\DependencyPlugin\\": "test/"
         },
-        "files": ["autoload/composer-2.0.php"]
-    },
-    "extra": {
-        "class": "Laminas\\DependencyPlugin\\DependencyRewriterPluginDelegator"
+        "files": [
+            "autoload/composer-2.0.php"
+        ]
     },
     "scripts": {
         "check": [
