--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.3 || ~8.0.0",
+        "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "composer-plugin-api": "^1.1 || ^2.0"
     },
     "require-dev": {
         "composer/composer": "^1.9 || ^2.0",
         "laminas/laminas-coding-standard": "^2.1",
         "mikey179/vfsstream": "^1.6",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.5.5",
         "psalm/plugin-phpunit": "^0.15.1",
         "roave/security-advisories": "dev-master",
         "vimeo/psalm": "^4.5"
