--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require-dev": {
         "composer/composer": "^1.9 || ^2.0",
         "laminas/laminas-coding-standard": "^2.2.1",
-        "mikey179/vfsstream": "^1.6",
+        "mikey179/vfsstream": "^1.6.10@alpha",
         "phpunit/phpunit": "^9.5.5",
         "psalm/plugin-phpunit": "^0.15.1",
         "roave/security-advisories": "dev-master",
