--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,17 @@
         "sort-packages": true,
         "platform": {
             "php": "7.3.99"
+        },
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "require": {
         "php": "^7.3 || ~8.0.0 || ~8.1.0",
-        "composer-plugin-api": "^1.1 || ^2.0"
+        "composer-plugin-api": ">=1.1.0 <2.3.0"
     },
     "require-dev": {
-        "composer/composer": "^1.9 || ^2.0",
+        "composer/composer": ">=1.9.0 <2.3.0",
         "laminas/laminas-coding-standard": "^2.2.1",
         "mikey179/vfsstream": "^1.6.10@alpha",
         "phpunit/phpunit": "^9.5.5",
