--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,20 @@
     "config": {
         "sort-packages": true,
         "platform": {
-            "php": "7.3.99"
+            "php": "7.4.99"
         },
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "require": {
-        "php": "^7.3 || ~8.0.0 || ~8.1.0",
+        "php": "^7.4 || ~8.0.0 || ~8.1.0",
         "composer-plugin-api": ">=1.1.0 <2.3.0"
     },
     "require-dev": {
         "composer/composer": ">=1.9.0 <2.3.0",
-        "laminas/laminas-coding-standard": "^2.2.1",
-        "mikey179/vfsstream": "^1.6.10@alpha",
+        "laminas/laminas-coding-standard": "~2.4.0",
+        "mikey179/vfsstream": "^1.6.11",
         "phpunit/phpunit": "^9.5.5",
         "psalm/plugin-phpunit": "^0.15.1",
         "roave/security-advisories": "dev-master",
