--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,12 @@
     "license": "BSD-3-Clause",
     "config": {
         "sort-packages": true,
-        "platform": {
-            "php": "7.4.99"
-        },
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
         "composer-plugin-api": ">=1.1.0 <2.3.0"
     },
     "require-dev": {
