--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "license": "BSD-3-Clause",
     "config": {
         "sort-packages": true,
+        "platform": {
+            "php": "8.0.99"
+        },
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
